--- a/index.html
+++ b/index.html
@@ -2,18 +2,14 @@
 layout: page
 ---
 <p>
-hi, my name is Imogen Fulton, and I’m a software developer with a fine arts degree. I currently work for <a href=https://github.com/acmilabs>@ACMILabs</a> and I'm a sport fencer (épée primarily but I do enjoy foil and sabre as well). <strike>I'm also genderqueer (hence the Equatorial Guinea TLD) and/or non-binary and/or agender... I really don't know precisely where I fit outide the gender binary other than "outside it"</strike> <em>I'm agender</em>. I founded a sibling group to PyLadies called PyEnbies in late 2017. We meet monthly... ish... in Melbourne, Australia and we have a Slack, because of course we do. swing me an email at <a href="mailto:pyenbies@dfdt.me">pyenbies@dfdt.me</a> if you want to know more about that.
+hi, my name is Scout Fulton, and I’m a software developer with a fine arts degree. I currently work for <a href=https://github.com/acmilabs>@ACMILabs</a> and I'm a sport fencer (épée primarily but I do enjoy foil and sabre as well). <strike>I'm also genderqueer (hence the Equatorial Guinea TLD) and/or non-binary and/or agender... I really don't know precisely where I fit outide the gender binary other than "outside it"</strike> <em>I'm agender</em>. I founded a sibling group to PyLadies called PyEnbies in late 2017. We meet monthly... ish... in Melbourne, Australia and we have a Slack, because of course we do. swing me an email at <a href="mailto:pyenbies@dfdt.me">pyenbies@dfdt.me</a> if you want to know more about that.
 </p>
 <p>
-in terms of my art practice (haven't used that word for a while) I'm interested in the intersection of code and art, but not in the "beautiful code" way people usually mean when they talk about that, I'm more into the idea that there are things we can do with code as a tool for creating art, because:
-</p>
-<p>
-<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">They&#39;re at a sales meeting. <a href="https://t.co/3aCBEXbfUi">pic.twitter.com/3aCBEXbfUi</a></p>&mdash; lapin-étoilé 🐰🌺🦇 (@kivikakk) <a href="https://twitter.com/kivikakk/status/968603065757589504?ref_src=twsrc%5Etfw">February 27, 2018</a></blockquote>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+in terms of my art practice (haven't used that word for a while) I'm interested in the intersection of code and art, but not in the "beautiful code" way people usually mean when they talk about that, I'm more into the idea that there are things we can do with code as a tool for creating art, because technology is a paintbrush. I heard that at a sales meeting.
 </p>
 <p>
 yeah. I've got so many words on that in my thesis and it was pretty much summed up in a tweet about something I heard at a work seminar.
 </p>
 <p>
-<strong>M-x :paintbrush</strong>
+<strong>M-x paintbrush</strong>
 </p>
