--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ hi, my name is Scout Fulton, and I’m a software developer with a fine arts deg
 in terms of my art practice (haven't used that word for a while) I'm interested in the intersection of code and art, but not in the "beautiful code" way people usually mean when they talk about that, I'm more into the idea that there are things we can do with code as a tool for creating art, because technology is a paintbrush. I heard that at a sales meeting.
 </p>
 <p>
-yeah. I've got so many words on that in my thesis and it was pretty much summed up in a tweet about something I heard at a work seminar.
+yeah. I've got so many words on that in my thesis and it was pretty much summed up in a sales line I heard at a work seminar.
 </p>
 <p>
 <strong>M-x paintbrush</strong>
