--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@ yeah. I've got so many words on that in my thesis and it was pretty much summed 
 <strong>M-x paintbrush</strong>
 </p>
 <p>
-You can check out my code at<a href=https://github.com/imogenerative>@imogenerative</a>.
+You can check out my code at <a href=https://github.com/imogenerative>@imogenerative</a>.
+</p>
+<p>
+I advise against following my twitter.
 </p>
