--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ yeah. I've got so many words on that in my thesis and it was pretty much summed 
 <strong>M-x paintbrush</strong>
 </p>
 <p>
-You can check out my code at <a href=https://github.com/imogenerative>@imogenerative</a>.
+You can check out my code at <a href=https://github.com/chiropterascout>@chiropterascout</a>.
 </p>
 <p>
 I advise against following my twitter.
