--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ in terms of my art practice (haven't used that word for a while) I'm interested 
 yeah. I've got so many words on that in my thesis and it was pretty much summed up in a sales line I heard at a work seminar.
 </p>
 <p>
-<pre>M-x paintbrush</pre>
+<code>M-x paintbrush</code>
 </p>
 <p>
 You can check out my code at <a href=https://github.com/chiropterascout>@chiropterascout</a>.
