--- a/index.html
+++ b/index.html
@@ -22,3 +22,6 @@ layout: page
 <p>
   I advise against following my <a href=https://twitter.com/calculush>twitter</a> or reading my <a href=https://scout.codes/blog>blog</a>.
 </p>
+<p>
+  <strong>HEY CHECK OUT THIS COOL <a href="https://keybase.pub/scoutquinn/cute-canary.txt">BIRD</a>.</strong>
+</p>
