--- a/index.html
+++ b/index.html
@@ -23,5 +23,5 @@ layout: page
   I advise against following my <a href=https://twitter.com/calculush>twitter</a> or reading my <a href=https://scout.codes/blog>blog</a>.
 </p>
 <p>
-  <strong>HEY CHECK OUT THIS COOL <a href="https://keybase.pub/scoutquinn/door-canary.txt">BIRD</a>.</strong>
+  <strong>HEY CHECK OUT THIS COOL <a href="https://keybase.pub/scoutquinn/door-canary.txt">BIRD</a> THAT WAS IN A DOOR.</strong>
 </p>
