--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 layout: page
 ---
 <p>
-  hi, my name is Scout Quinn, and I’m a software developer with a fine arts degree. I currently work for <a href=https://github.com/codeforaustralia>@CodeforAustralia</a> and I'm a sport fencer (épée primarily but I do enjoy foil and sabre as well). <strike>I'm also genderqueer and/or non-binary and/or agender... I really don't know precisely where I fit outide the gender binary other than "outside it"</strike> <em>I'm agender</em>. I founded a sibling group to PyLadies called PyEnbies in late 2017. We meet monthly... ish... in Melbourne, Australia and we have a Slack, because of course we do. swing me an email at <a href="mailto:pyenbies@dfdt.me">pyenbies@dfdt.me</a> if you want to know more about that.
+  hi, my name is Scout Quinn, and I’m a software developer with a fine arts degree. I currently work for <a href=https://github.com/thoughtworks>@thoughtworks</a> and I'm a sport fencer. <strike>I'm also genderqueer and/or non-binary and/or agender... I really don't know precisely where I fit outide the gender binary other than "outside it"</strike> <em>I'm agender</em>. I founded a sibling group to PyLadies called PyEnbies in late 2017. We met monthly... ish... in Melbourne, Australia and we have a Slack, because of course we do. swing me an email at <a href="mailto:pyenbies@dfdt.me">pyenbies@dfdt.me</a> if you want to know more about that.
 </p>
 <p>
-  
-</p>
-<p>
-  in terms of my <a href=https://chiropterascout.github.io>art</a> practice (haven't used that word for a while) I write a lot of concrete <a href=https://chiropterascout.github.io/poetry>poetry</a> and I'm interested in the intersection of code and art, but not in the "beautiful code" way people usually mean when they talk about that, I'm more into the idea that there are things we can do with code as a tool for creating art, because technology is a paintbrush. I heard that at a sales meeting.
+  in terms of my <a href=https://scoutquinn.github.io>art</a> practice (haven't used that word for a while) I write a lot of concrete <a href=https://scoutquinn.github.io/poetry>poetry</a> and I'm interested in the intersection of code and art, but not in the "beautiful code" way people usually mean when they talk about that, I'm more into the idea that there are things we can do with code as a tool for creating art, because technology is a paintbrush. I heard that at a sales meeting.
 </p>
 <p>
   yeah. I've got so many words on that in my thesis and it was pretty much summed up in a sales line I heard at a work seminar.
@@ -17,11 +14,11 @@ layout: page
   <code>M-x paintbrush</code>
 </p>
 <p>
-  You can check out my code at <a href=https://github.com/chiropterascout>@chiropterascout</a> and my twine games at <a href=https://calculush.gq>calculush.gq</a>.
+  You can check out my code at <a href=https://github.com/scoutquinn>@scoutquinn</a> and my twine games at <a href=https://calculush.gq>calculush.gq</a> and the weird music I make on graphics calculators is on <a href=https://soundcloud.com/razor_lined>razor_lined</a>.
 </p>
 <p>
   I advise against following my <a href=https://twitter.com/calculush>twitter</a> or reading my <a href=https://scout.codes/blog>blog</a>.
 </p>
 <p>
-  <strong>HEY CHECK OUT THIS COOL <a href="https://keybase.pub/scoutquinn/door-canary.txt">BIRD</a> I FOUND IN A DOOR.</strong>
+  <strong>HEY CHECK OUT THIS COOL <a href="https://keybase.pub/scoutquinn/door-canary.txt">BIRD</a> I FOUND IN THE BACK DOOR.</strong>
 </p>
