--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: page
   You can check out my code at <a href=https://github.com/scoutquinn>@scoutquinn</a> and my twine games at <a href=https://calculush.gq>calculush.gq</a> and the weird music I make on graphics calculators is on <a href=https://soundcloud.com/razor_lined>razor_lined</a>.
 </p>
 <p>
-  I advise against following my <a href=https://twitter.com/calculush>twitter</a> or reading my <a href=https://scout.codes/blog>blog</a>.
+  I advise against following my <a href=https://twitter.com/calculush>twitter</a> or reading my <a href=https://scout.codes/blog>blog</a>, but you should check out my <a href=https://docs.google.com/document/d/1D6KiDY4bMC-Ijw29iwuN32lGAnVwJIbq7kkkQwZmayM/edit?usp=sharing>RM profile</a>.
 </p>
 <p>
   <strong>HEY CHECK OUT THIS COOL <a href="https://keybase.pub/scoutquinn/door-canary.txt">BIRD</a> I FOUND IN THE BACK DOOR.</strong>
