--- a/index.html
+++ b/index.html
@@ -20,5 +20,5 @@ layout: page
   I advise against following my <a href=https://twitter.com/calculush>twitter</a> or reading my <a href=https://scout.codes/blog>blog</a>, but you should check out my <a href=https://docs.google.com/document/d/1D6KiDY4bMC-Ijw29iwuN32lGAnVwJIbq7kkkQwZmayM/edit?usp=sharing>RM profile</a>.
 </p>
 <p>
-  <strong>HEY CHECK OUT THIS COOL <a href="https://keybase.pub/scoutquinn/door-canary.txt">BIRD</a> I FOUND IN THE BACK DOOR.</strong>
+  <strong>HEY CHECK OUT THIS COOL <a href="https://keybase.pub/scoutquinn/door-canary.txt">BIRD</a> I FOUND IN A DOOR >.></strong>
 </p>
